--- a/index.html
+++ b/index.html
@@ -2332,8 +2332,8 @@
                                     </select>
                                 </div>
                             </div>
-                            <textarea class="inputTextClass areaTextClass" autocomplete="off"
-                                data-i18n-place="assistantText" placeholder id="systemInput" value="You are ChatGPT, a large language model trained by OpenAI. Carefully heed the user's instructions. Respond using markdown."></textarea>
+                            <textarea class="inputTextClass areaTextClass" autocomplete="off" value="You are ChatGPT, a large language model trained by OpenAI. Carefully heed the user's instructions. Respond using markdown."
+                                data-i18n-place="assistantText" placeholder id="systemInput"></textarea>
                         </div>
                         <div>
                             <span data-i18n-key="nature"></span>
