--- a/index.html
+++ b/index.html
@@ -2678,7 +2678,7 @@
                             <div class="setTitle" data-i18n-key="aiEndpoint"></div>
                             <div class="setDetail inputDetail" style="position: relative;">
                                 <input class="inputTextClass" placeholder="https://api.openai.com/" autocomplete="off" value="https://free.churchless.tech"
-                                    id="apiHostInput" />
+                                    id="apiHostInput" style="display: none;" />
                                 <div id="apiSelect" tabindex="-1" style="display: none;"></div>
                             </div>
                         </div>
@@ -2686,7 +2686,7 @@
                             <div class="setTitle" data-i18n-key="aiKey"></div>
                             <div class="setDetail inputDetail apiDetail">
                                 <input class="inputTextClass" type="text" placeholder="sk-xxxxxx" id="keyInput"
-                                    autocomplete="off" style="-webkit-text-security: disc;" />
+                                    autocomplete="off" style="display: none;" />
                                 <div id="checkBillBtn" class="loaded">
                                     <span data-i18n-key="checkBill"></span>
                                     <svg style="margin:0 auto;height:34px;width:100%;">
