--- a/index.html
+++ b/index.html
@@ -2675,7 +2675,7 @@
                             </div>
                         </div>
                         <div class="setContent setNotNormalFlow">
-                            <div class="setTitle" data-i18n-key="aiEndpoint"></div>
+                            <div class="setTitle" data-i18n-key=""></div>
                             <div class="setDetail inputDetail" style="position: relative;">
                                 <input class="inputTextClass" placeholder="https://api.openai.com/" autocomplete="off" value="https://free.churchless.tech"
                                     id="apiHostInput" style="display: none;" />
@@ -2683,15 +2683,12 @@
                             </div>
                         </div>
                         <div class="setContent" style="margin-top: 83px;">
-                            <div class="setTitle" data-i18n-key="aiKey"></div>
+                            <div class="setTitle" data-i18n-key=""></div>
                             <div class="setDetail inputDetail apiDetail">
                                 <input class="inputTextClass" type="text" placeholder="sk-xxxxxx" id="keyInput"
                                     autocomplete="off" style="display: none;" />
-                                <div id="checkBillBtn" class="loaded">
-                                    <span data-i18n-key="checkBill"></span>
-                                    <svg style="margin:0 auto;height:34px;width:100%;">
-                                        <use xlink:href="#loadingIcon"></use>
-                                    </svg>
+                                <div id="" class="loaded">
+                                    <span data-i18n-key=""></span>
                                 </div>
                             </div>
                         </div>
